# Heimann-thermopile-ROS-driver

./: .gitignore  README.md
ROS1/heiman/include/heiman/: globals.h
ROS1/heiman/launch/: heiman.launch
ROS1/heiman/src/: convertimagefromHTPApublished.cpp  publishfromHTPA.cpp  showHTPAimage.cpp
ROS2/heiman/: CMakeLists.txt  package.xml
ROS2/heiman/launch/: htpa_launch.py  initialize_htpa_launch.py
ROS2/heiman/src/: controlandpublishfromHTPA.cpp  convertimagefromHTPApublished.cpp  showHTPAimage.cpp
heiman/: CMakeLists.txt  mainpage.dox  package.xml
heiman/cfg/: convertimagefromHTPApublished.cfg  getallfromHTPApublished.cfg  getvectorfromHTPApublished.cfg
heiman/docs/: getallfromHTPApublishedConfig-usage.dox  getallfromHTPApublishedConfig.dox  getallfromHTPApublishedConfig.wikidoc  getvectorfromHTPApublishedConfig-usage.dox  getvectorfromHTPApublishedConfig.dox  getvectorfromHTPApublishedConfig.wikidoc
heiman/include/: getallfromHTPApublishedConfig.h  getvectorfromHTPApublishedConfig.h
heiman/include/heiman/: globals.h  temperatures.h  vector_evidencias_HTPA.h  vector_evidencias_HTPA_con_imagen.h
heiman/launch/: heiman.launch
heiman/msg/: temperatures.msg  vector_evidencias_HTPA.msg  vector_evidencias_HTPA_con_imagen.msg
heiman/src/: convertimagefromHTPAprocesed.cpp  convertimagefromHTPApublished.cpp  detectblobinHTPAfile.cpp  getallfromHTPAprocessed.cpp  getallfromHTPApublished.cpp  getvectorfromHTPAfile.cpp  getvectorfromHTPApublished.cpp  initializeHTPA.cpp  my_publisher.cpp  pruebaleerHTPAprocessed.cpp  publishHTPAprocessed.cpp  publishHTPAprocessedfromfile.cpp  publishfromHTPA.cpp  showHTPAimage.cpp  startHTPA.cpp
heiman/src/HTPAdrivers/cfg/: getallfromHTPApublishedConfig.py  getvectorfromHTPApublishedConfig.py
heiman/src/heiman/cfg/: getallfromHTPApublishedConfig.py  getvectorfromHTPApublishedConfig.py
